# go-radar-go

./: .gitignore  Camera.py  README.md  camera.py  color_conf.py  demo.py  demo2.py  detect.py  main.py  paint.py  processor.py  radar.sh  readme.md  telephoto.py  test.py
Zed/: Download and Install the ZED SDK.md
communicator/: build.sh  communicator.py  crc_table.py  test.py
communicator/rm_ui/: CMakeLists.txt  RM_Client_UI  RM_Client_UI.c  RM_Client_UI.h  RM_Client_UI.py  build_commands.sh  hackctypesgen.py  rm_ui.py  test-wrapper.py
configs/: deep_sort.yaml
deep_sort/: deep_sort.py
deep_sort/deep/: feature_extractor.py
deep_sort/sort/: detection.py  linear_assignment.py  nn_matching.py  track.py
docs/: YOLOV5+DEEPSORT项目应用：雷达站算法汇报.md  parse_dataset.py  parse_to_txt.py  使用自己的数据集训练(yolov5).md  关于如何在windows下配置这个项目的一些小tips.md
docs/Zed/: ZED_SDK.md
docs/项目进度与管理/hyh_wr/2020-11-23/: CMakeLists.txt  Readme.md  show_distance.cpp
models/: common.py  experimental.py
old_not_used/: Camera_old.py
pnp/: config.py  tools.py
tools/: draw.py
yolo/: detect.py
yolo/utils/: draw.py
yolov5/: .gitignore
yolov5/models/: experimental.py
yolov5/utils/: general.py
项目进度与管理/: note.md
项目进度与管理/hyh_wr/2020-11-15/: 本周进展：深度相机的学习了解和环境搭建.md
项目进度与管理/hyh_wr/2020-11-23/: 周期报告.md
项目进度与管理/hyh_wr/2020-12-20/: 本周进展.md
项目进度与管理/hyh_wr/2020-12-5/: Readme.md
项目进度与管理/zc/2020-11-23/: parse_to_txt.py
项目进度与管理/zc/2020-12-04/: 雷达站视觉代码运行情况分析.md
项目进度与管理/zc/2020-12-24/: 识别红蓝双方.md
项目进度与管理/zcy/20201122/: deepSortzongshu1.md
项目进度与管理/zcy/20201129/: 本周进度.md
(+9 files in other folders)
